# android-rn0.7x.x-demo

./: .gitignore  App.js  Readme.md  build.gradle  gradle.properties  metro.business.config.js  metro.common.config.js  package.json  settings.gradle
app/: .gitignore  build.gradle  proguard-rules.pro
app/libs/: react-native-combine-release.aar  react-native-safe-area-context-release.aar  react-native-screens-release.aar  react-native-svg-release.aar
app/rnlib/com/facebook/react/hermes-engine/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
app/rnlib/com/facebook/react/hermes-engine/0.70.3/: hermes-engine-0.70.3.module
app/rnlib/com/facebook/react/hermes-engine/0.70.4/: hermes-engine-0.70.4.module
app/rnlib/com/facebook/react/hermes-engine/0.70.6/: hermes-engine-0.70.6.module  hermes-engine-0.70.6.module.md5  hermes-engine-0.70.6.module.sha1  hermes-engine-0.70.6.module.sha256  hermes-engine-0.70.6.module.sha512
app/rnlib/com/facebook/react/hermes-engine/0.71.2/: hermes-engine-0.71.2-release.aar.md5  hermes-engine-0.71.2-release.aar.sha1  hermes-engine-0.71.2-release.aar.sha256  hermes-engine-0.71.2-release.aar.sha512  hermes-engine-0.71.2.module  hermes-engine-0.71.2.module.md5  hermes-engine-0.71.2.module.sha1  hermes-engine-0.71.2.module.sha256  hermes-engine-0.71.2.module.sha512  hermes-engine-0.71.2.pom  hermes-engine-0.71.2.pom.md5  hermes-engine-0.71.2.pom.sha1  hermes-engine-0.71.2.pom.sha256  hermes-engine-0.71.2.pom.sha512
app/rnlib/com/facebook/react/react-native/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
app/rnlib/com/facebook/react/react-native/0.70.3/: react-native-0.70.3-release.aar.md5  react-native-0.70.3-release.aar.sha1  react-native-0.70.3-release.aar.sha256  react-native-0.70.3-release.aar.sha512  react-native-0.70.3.module
app/src/debug/java/com/richie/: ReactNativeFlipper.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: business.android.bundle  index.android.bundle
app/src/main/res/layout/: activity_main.xml  activity_rn_boot.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
ios/: Podfile
ios/AwesomeProject.xcworkspace/xcuserdata/lylaut.xcuserdatad/: UserInterfaceState.xcuserstate
react-native-combine/: build.gradle
react-native-combine/src/main/: AndroidManifest.xml
react-native-combine/src/main/jni/: Android-prebuilt.cmake  CMakeLists.txt  MainApplicationModuleProvider.cpp  MainComponentsRegistry.cpp  MainComponentsRegistry.h  rncli.cpp
react-native-safe-area-context/: build.gradle
react-native-safe-area-context/src/main/: AndroidManifest.xml
react-native-safe-area-context/src/main/jni/: Android.mk  CMakeLists.txt
react-native-screens/: build.gradle
react-native-screens/src/main/jni/: Android-prebuilt.cmake  Android.mk  CMakeLists.txt
react-native-svg/: build.gradle
react-native-svg/src/main/: AndroidManifest.xml
react-native-svg/src/main/jni/: Android-prebuilt.cmake  Android.mk  CMakeLists.txt  rnsvg-generated.cpp  rnsvg.h
(+57 files in other folders)
